Fixed menu spacing

--- a/styles.css
+++ b/styles.css
@@ -100,10 +100,12 @@ header {
     margin: 0;
     text-align: end;
     vertical-align: middle;
+    width: 10%
 }
 
 .user h2 {
     margin: 0;
+    word-wrap: break-word;
 }
 
 
@@ -335,7 +337,7 @@ header {
 .grid-container {
     display: grid;
     height: 100%;
-    width: 80%;
+    width: 60%;
     border: 2px solid #362F2F;
     margin-bottom: 10px;
     padding: 10px;
@@ -352,7 +354,11 @@ header {
 .saved-item {
     background-color: white;
     height: 100px;
+    width: 100%;
     border-radius: 20px;
+    text-align: center;
+    line-height: 100px;
+    font-size: 3rem;
 }
 
 
